atualizaçao de imagens

--- a/templates/galeria/partials/_footer.html
+++ b/templates/galeria/partials/_footer.html
@@ -1,12 +1,12 @@
 {% load static %}
 <footer class="rodape">
     <div class="rodape__icones">
-        <a href="N/A" target=”_blank” >
+        <a href="{% static 'static/assets/imagens/galeria/42423.png' %}" target=”_blank” >
             <img src="{% static '/assets/ícones/1x/twitter.png' %}" alt="ícone twitter">
         </a>
         <a href="https://www.instagram.com/luiz__athayde/" target=”_blank” >
             <img src="{% static '/assets/ícones/1x/instagram.png' %}" alt="ícone instagram">
         </a>
     </div>
-    <p class="rodape__texto">Desenvolvido pelo Luiz </p>
+    <p class="rodape__texto">Desenvolvido pelo luiz </p>
 </footer>
