--- a/templates/galeria/base.html
+++ b/templates/galeria/base.html
@@ -14,9 +14,10 @@
 </head>
 
 <body>
-    {% include 'galeria/partials/lateral.html' %}
+    {% include 'galeria/partials/_menu.html' %}
     {% block content %}{% endblock %}
     {% include 'galeria/partials/_footer.html' %}
+
 </body>
 
 </html>
