--- a/templates/galeria/partials/_menu.html
+++ b/templates/galeria/partials/_menu.html
@@ -4,6 +4,12 @@
         <img src="{% static '/assets/logo/Logo(2).png' %}" alt="Logo da Alura Space" />
         <div class="cabecalho__busca">
             <div class="busca__fundo">
+                <form action="{%url 'buscar'%}">
+                    <input class="busca__input" type="text" name="buscar" placeholder="O que você procura?">
+                    <button typo="submit">
+                        <img class="busca__icone" src="{% static '/assets/ícones/1x/search.png' %}" alt="ícone de search">
+                    </button>
+                </form>
                 <input class="busca__input" type="text" placeholder="O que você procura?">
                 <img class="busca__icone" src="{% static '/assets/ícones/1x/search.png' %}" alt="ícone de search">
             </div>
