mensagens login/cadastro

--- a/templates/galeria/partials/_footer.html
+++ b/templates/galeria/partials/_footer.html
@@ -1,8 +1,8 @@
 {% load static %}
 <footer class="rodape">
     <div class="rodape__icones">
-        <a href="{% static 'static/assets/imagens/galeria/42423.png' %}" target=”_blank” >
-            <img src="{% static '/assets/ícones/1x/twitter.png' %}" alt="ícone twitter">
+        <a href="https://www.linkedin.com/in/luiz-felipe-machado-athayde-0a1172264/" target=”_blank” >
+            <img src="{% static '/assets/ícones/1x/linkedin .png' %}" alt="ícone twitter">
         </a>
         <a href="https://www.instagram.com/luiz__athayde/" target=”_blank” >
             <img src="{% static '/assets/ícones/1x/instagram.png' %}" alt="ícone instagram">
