--- a/templates/partials/_menu.html
+++ b/templates/partials/_menu.html
@@ -1,7 +1,9 @@
 {% load static %}
 <div class="pagina-inicial">
     <header class="cabecalho">
-        <img src="{% static '/assets/logo/Logo(2).png' %}" alt="Logo da Alura Space" />
+        <a href="{% url 'index' %}">
+            <img src="{% static '/assets/logo/Sem título.png' %}" alt="Logo da Alura Space" />
+        </a>
         {% for message in messages %}
         <div class="alert alert-primary">
             <p id="messages">{{ message }}</p>
@@ -25,5 +27,6 @@
                 <a href="{% url 'login' %}"><img src="{% static '/assets/ícones/1x/Mais vistas - inativo.png' %}"> Login</a>
                 <a href="{% url 'cadastro' %}"><img src="{% static '/assets/ícones/1x/Novas - inativo.png' %}"> Cadastro</a>
                 <a href="{%url 'logout'%}"><img src="{% static '/assets/ícones/1x/Surpreenda-me - inativo.png' %}"> logout</a>
+                <a href="{%url 'nova_imagem'%}"><img src="{% static '/assets/ícones/1x/new.png' %}"> nova imagem</a>
             </nav>
         </section>
