--- a/templates/galeria/buscar.html
+++ b/templates/galeria/buscar.html
@@ -10,10 +10,10 @@
                 <section class="tags">
                     <p class="tags__titulo">Busque por tags:</p>
                     <ul class="tags__lista">
-                        <li class="tags__tag">Nebulosa</li>
-                        <li class="tags__tag">Estrela</li>
-                        <li class="tags__tag">Galáxia</li>
-                        <li class="tags__tag">Planeta</li>
+                        <li class="tags__tag">engraçada</li>
+                        <li class="tags__tag">cientifica</li>
+                        <li class="tags__tag">assustadora</li>
+                        <li class="tags__tag">muito badass</li>
                     </ul>
                 </section>
                 <section class="galeria">
