--- a/templates/galeria/editar_imagem.html
+++ b/templates/galeria/editar_imagem.html
@@ -3,7 +3,7 @@
 {% block content %}
 
             <section class="galeria" style="margin-left: 5em">
-                <form action="{% url 'nova_imagem' %}" method="POST" enctype="multipart/form-data">
+                <form action="{% url 'editar_imagem' foto_id %}" method="POST" enctype="multipart/form-data">
                     {% csrf_token %}
                     <div class="row">
                         {% for field in form.visible_fields %}
@@ -14,7 +14,7 @@
                         {% endfor %}
                     </div>
                     <div>
-                        <button class="btn btn-success col-12" style="padding: top 5px;" type = "submit">Postar sua brincadeira</button>
+                        <button class="btn btn-success col-12" style="padding: top 5px;" type = "submit">editar foto</button>
                     </div>
                 </form>
             </section>
