--- a/templates/galeria/index.html
+++ b/templates/galeria/index.html
@@ -5,15 +5,15 @@
             <section class="conteudo">
                 <section class="banner">
                     <img class="banner__imagem" src="{% static '/assets/imagens/Banner(2).png' %}" alt="banner Alura Space">
-                    <h1 class="banner__titulo"> A galeria mais completa de fotos do espaço!</h1>
+                    <h1 class="banner__titulo">Poste aqui as imagens que vierem na sua mente!!!</h1>
                 </section>
                 <section class="tags">
                     <p class="tags__titulo">Busque por tags:</p>
                     <ul class="tags__lista">
-                        <li class="tags__tag">Nebulosa</li>
-                        <li class="tags__tag">Estrela</li>
-                        <li class="tags__tag">Galáxia</li>
-                        <li class="tags__tag">Planeta</li>
+                        <li class="tags__tag">engraçada</li>
+                        <li class="tags__tag">cientifica</li>
+                        <li class="tags__tag">assustadora</li>
+                        <li class="tags__tag">badass</li>
                     </ul>
                 </section>
                 <section class="galeria">
@@ -30,7 +30,7 @@
                                     <img class="card__imagem" src="{{ fotografia.foto.url }}" alt="foto">
                                 {% endif %}
                                 </a>
-                                <span class="card__tag">Estrelas</span>
+                                <span class="card__tag">engraçada</span>
                                 <div class="card__info">
                                     <p class="card__titulo">{{ fotografia.nome }}</p>
                                     <div class="card__texto">
